--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,7 @@
-<div ng-controller="LandingController as lc">
-	<p> hello world. </p>
-</div>
+<md-content id="content" fullheight>
+	<div ng-controller="ContentController as cc">
+
+
+
+	</div>
+</md-content>
