--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>DatDough</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-  <%= favicon_link_tag %>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-</head>
-<%= yield %>
+	<head>
+	  <title>DatDough</title>
+	  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	  <%= csrf_meta_tags %>
+	  <%= favicon_link_tag %>
+	  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	</head>
+	<body>
+		<md-toolbar id="toolbar">
+
+		    <div class="md-toolbar-tools header" ng-controller="ToolbarController as tb">
+
+		        <div layout="row" layout-align="start start" flex="15">
+		            <H1 class="logo" id="name">DatDough
+		            	<sub title="version">v0.0.0</sub>
+		            </H1>
+		        </div>
+
+		        <span flex></span>
+
+		        <div class="icon-container" layout="row" layout-align="end center">
+		        	<i title="settings" class="material-icons">settings</i>
+		        	<i title="stats" class="material-icons">assessment</i>
+		            <i title="Logout" class="material-icons">exit_to_app</i>
+		        </div>
+		        
+		    </div>
+		</md-toolbar>
+		<%= yield %>
+	</body>
 </html>
