--- a/app/assets/stylesheets/content.scss
+++ b/app/assets/stylesheets/content.scss
@@ -1,5 +1,9 @@
 //Content CSS
 
+.backdrop{
+	background:center no-repeat fixed url('http://lorempixel.com/1250/800/abstract');
+}
+
 #content {
-	overflow:hidden;
+	
 }
