--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,5 @@
-<md-content id="content" fullheight>
-	<div ng-controller="ContentController as cc">
-
-
-
+<md-content id="content" ng-controller="ContentController as cc" layout="row" layout-align="center center" fullheight>
+	<div>
+		<p>Hello Zepp</p>
 	</div>
 </md-content>
