added login controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 	  <%= favicon_link_tag %>
 	  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	</head>
-	<body class="backdrop" layout="column">
+	<body ng-controller="LoginController" class="backdrop" layout="column">
 		<md-toolbar id="toolbar">
 
 		    <div class="md-toolbar-tools header" ng-controller="ToolbarController as tb">
