--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,1 @@
-<md-content id="content" ng-controller="ContentController as cc" layout="row" layout-align="center center" fullheight>
-	<div>
-		<p>Hello Zepp</p>
-	</div>
-</md-content>
+<%= render 'login' %>
