basic login page

--- a/app/views/home/_login.html.erb
+++ b/app/views/home/_login.html.erb
@@ -1,10 +1,10 @@
 <div id="login" ng-controller="LoginController as lc" layout="row" layout-align="center center" fullheight>
 	<form novalidate layout="column" layout-align="space-between center" flex="40">
-		<md-input-container label="Email" class="md-default-theme fullWidth">
+		<md-input-container label="Email" class="fullWidth">
 			<label>Email</label>
 			<input ng-model="lc.username" class="md-input ng-touched" required>
 		</md-input-container>		
-		<md-input-container class="md-default-theme fullWidth">
+		<md-input-container class="fullWidth">
 			<label>Password</label>
 			<input ng-model="lc.password" class="md-input" required>
 		</md-input-container>
@@ -13,7 +13,10 @@
 			<span class="error-msg">{{lc.errorMsg}}</span>
 		</div>
 
-         <span class="forgotPass">Forgot password?</span>
-         <md-button class="md-primary fullWidth">Login</md-button>
+		<span class="forgotPass">Forgot password?</span>
+		<div layout="row" layout-align="space-between center">
+	         <md-button class="md-primary">Login</md-button>
+	         <md-button class="md-primary">Sign Up</md-button>
+        </div>
 	</form>
 </div>
