--- a/app/views/home/_login.html.erb
+++ b/app/views/home/_login.html.erb
@@ -15,7 +15,7 @@
 
 		<span class="forgotPass">Forgot password?</span>
 		<div layout="row" layout-align="space-between center">
-			<md-button class="md-primary" ng-click="lc.signIn(lc.user, lc.password)">Login</md-button>
+			<md-button class="md-primary" ng-click="lc.signIn()">Login</md-button>
 		<md-button class="md-primary">Sign Up</md-button>
         </div>
 	</form>
