integrated signin and signup functionalities

--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -1,5 +1,5 @@
 <md-content id="content" ng-controller="DashboardController as dbc" layout="row" layout-align="center center" fullheight>
 	<div>
-		<p>Hello Zepp</p>
+		<p>My Dashboard</p>
 	</div>
 </md-content>
