--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,26 +9,35 @@
             <span flex></span>
 
             <div class="icon-container" layout="row" layout-align="end center">
-            	<div ng-show="tb.isLoggedIn">
-    	        	<i title="Settings" class="material-icons">settings</i>
-    	        	<i title="Stats" class="material-icons">assessment</i>
-    	            <i title="Logout" class="material-icons">exit_to_app</i>
-    	        </div>
-    	        <div ng-show="!tb.isLoggedIn" layout="row">
+                <div ng-show="tb.isSignedIn" layout="row">
+                    <div class="SettingsBtn" layout="row" layout-align="center center">
+                        <i title="Settings" class="material-icons">settings</i>
+                        <span>Settings</span>
+                    </div>
+                    <div class="StatsBtn" layout="row" layout-align="center center">
+                        <i title="Stats" class="material-icons">assessment</i>
+                        <span>Stats</span>
+                    </div>
+                    <div class="signOutBtn" ng-click="tb.signOut()" layout="row" layout-align="center center">
+                        <i title="Sign Out" class="material-icons">exit_to_app</i>
+                        <span>Sign Out</span>
+                    </div>
+                </div>
+                <div ng-hide="tb.isSignedIn" layout="row">
                     <div class="signUpBtn" ng-click="tb.selectView(2)" layout="row" layout-align="center center">
                         <i title="Sign Up" class="material-icons">create</i>
                         <span>Sign Up</span>
                     </div>
                     <div class="signInBtn" ng-click="tb.selectView(1)" layout="row" layout-align="center center">
-    	        	    <i title="Sign In" class="material-icons">exit_to_app</i>
+                        <i title="Sign In" class="material-icons">exit_to_app</i>
                         <span>Sign In</span>
                     </div>
-    	        </div>
+                </div>
             </div>
             
         </div>
     </md-toolbar>
-
+    <p>{{tb.isSignedIn}}</p>
     <!-- Content -->
     <div flex="90" ng-include="tb.template" fullheight></div>
 </body>
